# M1_MPI

TP/: TP1-threads.tgz  TP2-julia.tgz
TP/TP1-threads/: 0_exercice1.c  1_exercice2.c  Makefile  README.md  distributeur.c  exercice1.c  exercice2.c  proj2pdf
TP/TP2-julia/: README.md
TP/TP2-julia/julia/: .gitignore  CMakeLists.txt  README.md  compute_julia_pixel.c  julia.c  julia.h  proj2pdf  write_bmp_header.c
